# my_poetry_project

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
