[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = ""
authors = ["steventimberman <stevetimberman@gmail.com>"]
readme = "README.md"
packages = [{include = "my_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
