[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = "CLI for generating projects using Python Poetry."
authors = ["steventimberman <stevetimberman@gmail.com>"]
maintainers = ["steventimberman <stevetimberman@gmail.com>"]
readme = "README.md"
packages = [{include = "my_poetry_project"}]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7-beta.0"
flake8 = "^3.9.2"
isort = "^5.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"
blacken-docs = "^1.10.0"
gitlint = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true
